<resources>
    <string name="app_name">Prima app</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="button_plus">+</string>
    <string name="button_min">-</string>
    <string name="button_per">*</string>
    <string name="button_div">/</string>
    <string name="button_equals">=</string>
    <string name="button_zero">0</string>
    <string name="button_ac">AC</string>
    <string name="button_login">login</string>
    <string name="button_register">register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login_error">Login error</string>
    <string name="login_success">Login success</string>
    <string name="number_phone">number phone</string>
    <string name="button_registerdue">Register</string>
    <string name="et_benvenuto">Welcome</string>
</resources>
